--- a/airbnb-clone-frontend/package.json
+++ b/airbnb-clone-frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.12",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
